--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,34 @@ body {
     height: 2px;
     width: 100%;
 }
+
+
+.swiper-button-next,
+.swiper-button-prev {
+    background-color: white;
+    border-radius: 50%;
+    padding: 24px;
+    background-size: 40px;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-position: center;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+    content: "";
+    visibility: hidden;
+}
+
+.swiper-button-prev {
+    margin-left: 30px;
+    background-image: url("/src/assets/icons/arrowl.svg");
+}
+
+.swiper-button-next {
+    margin-right: 30px;
+    background-image: url("/src/assets/icons/arrowr.svg");
+}
+
